# AgenticAIOps

./: .env.example  .gitignore  HACKATHON_PRESENTATION.md  README.md  pyproject.toml
frontend/: .env.development  ReadMe.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/chat/: page.tsx
frontend/app/data/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/metrics/: page.tsx
frontend/app/models/: page.tsx
frontend/components/animations/: LoadingSpinner.tsx  SuccessCelebration.tsx
frontend/components/auth/: ProtectedRoute.tsx
frontend/components/cards/: ConstraintAnalysisCard.tsx  DeploymentPreview.tsx  JobStatusCard.tsx  RecommendationCard.tsx
frontend/components/chat/: AgentMessage.tsx  ChatInput.tsx  EmptyState.tsx  SmartSuggestions.tsx  TypingIndicator.tsx  UserMessage.tsx
frontend/components/dialogs/: ConfirmDialog.tsx  ConstraintNegotiation.tsx  ModelDetails.tsx  SettingsDialog.tsx
frontend/components/layout/: MobileLayout.tsx  TopBar.tsx  UserDropdown.tsx
frontend/components/notifications/: NotificationPanel.tsx  ToastContainer.tsx
frontend/components/session/: CreateSessionModal.tsx  NewSessionButton.tsx  SessionListItem.tsx  SessionsPanel.tsx
frontend/components/settings/: SettingsModal.tsx
frontend/components/sidebar/: ActiveJobsList.tsx  BudgetDisplay.tsx  QuickActions.tsx  Sidebar.tsx
frontend/components/ui/: Button.tsx  KeyboardShortcuts.tsx  LoadingStates.tsx  Progress.tsx  Toast.tsx
frontend/components/widgets/: CostCalculator.tsx  LiveMetrics.tsx  ModelComparison.tsx
frontend/contexts/: AuthContext.tsx  NotificationContext.tsx
frontend/hooks/: useAgent.ts  useBudget.ts  useKeyboard.ts  useLiveMetrics.ts  useLocalStorage.ts  useSession.ts  useToast.ts
frontend/public/: auth-config.js  config.js
frontend/scripts/: sync-auth-config.js
frontend/types/: agent.ts  budget.ts  canvas-confetti.d.ts  jobs.ts  metrics.ts  models.ts  notifications.ts  session.ts
lambda/: check_sagemaker_quotas.py  handler.py  launch_sagemaker_training_handler.py  list_s3_datasets_handler.py  prepare_dataset_handler.py  quota_updater_handler.py
lambda/processors/: README.md  __init__.py  base_processor.py  cier_hf_processor.py  cier_processor.py  default_processor.py
scripts/: migrate_csv_to_dynamodb.py  migrate_session_budgets.py  prepare_cier_dataset.py  seed_comprehensive_quotas.py  setup_bedrock_agent.sh  setup_bedrock_agent_manual_iam.sh  setup_gateway.py  setup_model_registry_tables.py  start-dev.sh  sync-ui-config.js  test_bedrock_agent.py  upload_scier_to_s3.py
scripts/training/: requirements.txt  train_ner.py
src/llmops_agent/: __init__.py  cli.py  config.py
src/llmops_agent/agents/: __init__.py  data_agent.py  model_agent.py  orchestrator.py  react_agent.py  state_graph.py  training_agent.py
src/llmops_agent/api/: __init__.py  dependencies.py  error_handlers.py  main.py
src/llmops_agent/api/routes/: __init__.py  agent.py  budgets.py  data.py  health.py  jobs.py  models.py  sessions.py  tools.py
src/llmops_agent/core/: exceptions.py
src/llmops_agent/models/: __init__.py  agent_models.py  state_models.py
src/llmops_agent/scripts/: __init__.py  verify_env.py
src/llmops_agent/services/: __init__.py  bedrock_service.py  budget_service.py  dynamodb_service.py  gateway_service.py  quota_service.py  s3_service.py  sagemaker_service.py
tests/: __init__.py  conftest.py
